[package]
name = "hjul"
version = "0.1.0"
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rot256/hjul"
keywords = ["timer", "wheel", "mio-extra", "mio", "callback"]
description = "Simple and efficient async. timer abstraction on top of `mio`"

[dependencies]
mio = "0.6.19"
mio-extras = "2.0.5"
spin = "0.5.1"
